<package>
  <name>uav_ros_msgs</name>
  <version>1.0.0</version>
  <description>ROS messages used by the "uav_ros_stack" package</description>
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
